 @startuml

class CreateSharedBoardUI  {
}

class CreateSharedBoardController {
}

class CreateSharedBoardBuilder {
}

class   SharedBoardRepository {
}

class SharedBoard {
}

class RepositoryFactory {
}

CreateSharedBoardUI : doShow()
CreateSharedBoardUI -down-> CreateSharedBoardController: uses the controller

CreateSharedBoardController : addSharedBoard()
CreateSharedBoardController --> CreateSharedBoardBuilder : uses to build
CreateSharedBoardBuilder --> SharedBoard: create

SharedBoard --> SharedBoardRepository: uses the repository to persiste in DB

SharedBoardRepository --> RepositoryFactory : uses to create the repository
@enduml